changing logic a bit for better eval visual on engine

--- a/src/Net/jepa_test.ipynb
+++ b/src/Net/jepa_test.ipynb
@@ -981,6 +981,21 @@
     "    critical_moments = [i for i, change in enumerate(control_changes) if change > threshold]\n",
     "    return critical_moments\n",
     "\n",
+    "def analyze_position(board, engine):\n",
+    "    board_tensor = board_to_tensor(board)\n",
+    "    influence_channels = create_influence_channels(board_tensor)\n",
+    "    metrics = combine_influences(influence_channels)\n",
+    "    \n",
+    "    result = engine.analyse(board, chess.engine.Limit(time=0.1))\n",
+    "    eval_score = result['score'].relative.score(mate_score=10000)\n",
+    "    \n",
+    "    # Ensure evaluation is always from white's perspective\n",
+    "    metrics['stockfish_eval'] = eval_score if board.turn == chess.WHITE else -eval_score\n",
+    "    \n",
+    "    metrics['jepa_mask'] = create_jepa_mask(torch.tensor(metrics['influence_distribution']).reshape(8, 8))\n",
+    "    \n",
+    "    return metrics\n",
+    "\n",
     "def analyze_game_sequence(moves: List[str], engine_path: str) -> Dict[str, List[float]]:\n",
     "    board = chess.Board()\n",
     "    history = {\n",
@@ -994,7 +1009,6 @@
     "        'white_influence': [],\n",
     "        'black_influence': [],\n",
     "        'jepa_mask': [],\n",
-    "        'influence_distribution': []\n",
     "    }\n",
     "    prev_distribution = None\n",
     "    \n",
@@ -1011,29 +1025,15 @@
     "            for key in history.keys():\n",
     "                if key in metrics:\n",
     "                    history[key].append(metrics[key])\n",
-    "                elif key == 'js_divergence':\n",
-    "                    if prev_distribution is not None:\n",
-    "                        history[key].append(jensenshannon(metrics['influence_distribution'], prev_distribution))\n",
-    "                    else:\n",
-    "                        history[key].append(0)\n",
+    "            \n",
+    "            if prev_distribution is not None:\n",
+    "                history['js_divergence'].append(jensenshannon(metrics['influence_distribution'], prev_distribution))\n",
+    "            else:\n",
+    "                history['js_divergence'].append(0)\n",
     "            \n",
     "            prev_distribution = metrics['influence_distribution']\n",
     "    \n",
-    "    history['critical_moments'] = find_critical_moments(history)\n",
     "    return history\n",
-    "\n",
-    "def analyze_position(board, engine):\n",
-    "    board_tensor = board_to_tensor(board)\n",
-    "    influence_channels = create_influence_channels(board_tensor)\n",
-    "    metrics = combine_influences(influence_channels)\n",
-    "    \n",
-    "    result = engine.analyse(board, chess.engine.Limit(time=0.1))\n",
-    "    eval_score = result['score'].relative.score(mate_score=10000)\n",
-    "    metrics['stockfish_eval'] = eval_score if eval_score is not None else 0\n",
-    "    \n",
-    "    metrics['jepa_mask'] = create_jepa_mask(torch.tensor(metrics['influence_distribution']).reshape(8, 8))\n",
-    "    \n",
-    "    return metrics\n",
     "\n",
     "# Analyze games\n",
     "alphazero_moves = [\n",
