better js and dumping json

--- a/src/Net/jepa_test.ipynb
+++ b/src/Net/jepa_test.ipynb
@@ -1060,9 +1060,16 @@
     "games = {'AlphaZero': alphazero_moves, 'Vladimir': vladimir_moves}\n",
     "histories = {name: analyze_game_sequence(moves, stockfish_path) for name, moves in games.items()}\n",
     "\n",
+    "# Modify the JSON output to include move numbers\n",
+    "for game_name, game_history in histories.items():\n",
+    "    for key in game_history:\n",
+    "        game_history[key] = [{\"move\": i+1, \"value\": value} for i, value in enumerate(game_history[key])]\n",
+    "\n",
     "# Convert data to JSON for JavaScript visualization\n",
     "with open('chess_analysis_data.json', 'w') as f:\n",
-    "    json.dump(histories, f)"
+    "    json.dump(histories, f)\n",
+    "\n",
+    "print(\"Analysis complete. Data saved to chess_analysis_data.json\")"
    ]
   }
  ],
