tests from notebook version of new masking and strategy

--- a/src/Net/jepa_test.ipynb
+++ b/src/Net/jepa_test.ipynb
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,9 +1067,7 @@
     "\n",
     "# Convert data to JSON for JavaScript visualization\n",
     "with open('chess_analysis_data.json', 'w') as f:\n",
-    "    json.dump(histories, f)\n",
-    "\n",
-    "print(\"Analysis complete. Data saved to chess_analysis_data.json\")"
+    "    json.dump(histories, f)"
    ]
   }
  ],
